# tmspec

./: .gitignore  README.md  setup.cfg  tmspec.g4
doc/: development.md  index.md  installation.md  language.md  rules.md
examples/: updater.tm
python3/: ErrorsAndQuestionsReporter.py  GraphvizDFDRenderer.py  JSONThreatsReporter.py  Makefile  ThreatAnalyzer.py  ThreatLibrary.py  TmspecError.py  TmspecModel.py  TmspecModelVisitor.py  TmspecParser.py  compile.py  requirements.txt  tmtool.py
python3/test/: test_graphviz_dfd.py  test_parse_spec.py  test_threat_analyzer.py
src/tmspec/: ErrorsAndQuestionsReporter.py  GraphvizDFDRenderer.py  Makefile  ThreatAnalyzer.py  TmspecModel.py  TmspecModelVisitor.py  TmspecParser.py  build.sh  cli.py  console_reporter.py  error.py  graphviz_dfd_renderer.py  json_reporter.py  model.py  model_creation_visitor.py  parser.py  quickfix_reporter.py  threat_analyzer.py  threat_library.py  tmspec.interp  tmspec.tokens  tmspecLexer.interp  tmspecLexer.py  tmspecListener.py  tmspecParser.py  tmspecVisitor.py  tmspec_parser.py  tmtool.py
tests/: test_graphviz_dfd.py  test_parse_spec.py  test_threat_analyzer.py
threatlibs/: base.prolog  stride-per-element.prolog  test.prolog
tmspec/: ErrorsAndQuestionsReporter.py  GraphvizDFDRenderer.py  ThreatAnalyzer.py  TmspecModel.py  TmspecModelVisitor.py  build.sh  compile.py  tmspec.g4  tmtool.py
tmspec/test/: test_parse_spec.py  test_threat_analyzer.py
utils/antlr4-container/: Containerfile  README.md  grun
utils/antlr4-container/scripts/: antlr4  javac
utils/vim/ftdetect/: tmspec.vim
(+2 files in other folders)
