[metadata]
name = tmspec
version = 0.0.1
author = Tim Hemel
author_email = tim@securesoftware.nl
description = Threat modeling specification language analyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timhemel/tmspec
project_urls =
    Bug Tracker = https://github.com/timhemel/tmspec/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    yldprolog>=1.0.0
    antlr4-python3-runtime==4.9.1
    graphviz==0.16

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tmspec=tmspec.tmtool:main
    # yldpc=yldprolog.compiler:main
    # TODO: change tmtool to cli

